# ArtGAN-GP

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docker/: .dockerignore  Dockerfile  docker-compose.yml
notebooks/: colab_train.ipynb  latent_interpolation.ipynb
scripts/: download_data.py  run_sweep.py  sample.py
src/config/: baseline.yaml  sweep.yaml
src/config/data/: wikiart_abstract.yaml
src/config/model/: wgan_gp.yaml
src/config/training/: wgan_gp.yaml
src/config/wandb/: default.yaml
src/data/: dataset.py  loader.py  transforms.py
src/models/: __init__.py  critic.py  generator.py  init.py
src/training/: gradient_penalty.py  loop.py  train.py
src/utils/: checkpoint.py  interpolation.py  logger.py  metrics.py  visualize.py
tests/: test_data.py  test_gradient_penalty.py  test_interpolation.py  test_models.py  test_smoke.py  test_sweep.py  test_training_loop.py
